// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kbLUtZ"
  id={null}
  rows={null}
>
  <div
    className="Colors__ColorBlockColor-x3fy5-1 bJNcJB"
    color="navy"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 eKIRAB"
    color="sky"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 YEMMN"
    color="gold"
  />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kbLUtZ"
  id={null}
  rows={null}
>
  <div
    className="Colors__ColorBlockColor-x3fy5-1 duAJhy"
    color="grey"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 hQliAj"
    color="seafoam"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 fcBUAx"
    color="whirlpool"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 hdwpfI"
    color="aqua"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 jgYxRr"
    color="teal"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 hDviKM"
    color="royal"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 lkAVmh"
    color="orange"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 cimsUE"
    color="yellow"
  />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kbLUtZ"
  id={null}
  rows={null}
>
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 hZQsPZ"
    color="action40"
  />
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 gUmLdJ"
    color="action60"
  />
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 eQHnhP"
    color="action80"
  />
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 fYlNZk"
    color="action100"
  />
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kbLUtZ"
  id={null}
  rows={null}
>
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 jfSWOE"
    color="info80"
  />
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 kIxPYU"
    color="success80"
  />
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 diWZew"
    color="warning80"
  />
  <div
    className="Colors__ThemeColorBlockColor-x3fy5-0 fKlBJB"
    color="alert80"
  />
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kbLUtZ"
  id={null}
  rows={null}
>
  <div
    className="Colors__ColorBlockColor-x3fy5-1 dJfgEe"
    color="grey10"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 bBGgun"
    color="grey20"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 kqPtPe"
    color="grey30"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 kRCMhD"
    color="grey40"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 izUwDH"
    color="grey50"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 gTHyAg"
    color="grey60"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 jSAiJt"
    color="grey70"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 tMGag"
    color="grey80"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 fAclCo"
    color="grey90"
  />
  <div
    className="Colors__ColorBlockColor-x3fy5-1 gzyZqc"
    color="grey100"
  />
</section>
`;
